Fix home align

--- a/src/view/home/GFTHomeView.scss
+++ b/src/view/home/GFTHomeView.scss
@@ -1,15 +1,16 @@
 .content_bg {
-    padding-left: 5%;
-    padding-right: 5%;
+    // padding-left: 5%;
+    // padding-right: 5%;
     padding-bottom: 100px;
     width: 100%;
     height: 100%;
+    max-width: 1440px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    overflow-y: scroll;
+    // overflow-y: scroll;
     box-sizing: border-box;
-
+    // background: #4FC5FF;
 
     .item_tab {
         width: auto;
